<resources>
    <string name="app_name">MatchingGame</string>
    <string name="title">Matching Game</string>
    <string name="startGame">Start Game</string>
    <string name="settings">Settings</string>
    <string name="highestScores">Highest Scores</string>
    <string name="backgroundMusic">Background Music</string>
    <string name="musicOn">ON</string>
    <string name="musicOff">OFF</string>
    <string name="volume">Volume</string>
    <string name="volumeUp">Up</string>
    <string name="volumeDown">Down</string>
    <string name="home">Home</string>
    <string name="team7">Team 7</string>
    <string name="top5">Top 5 Scores</string>
    <string name="myScore">My Scores</string>
    <string name="score">Scores</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="top1">1</string>
    <string name="score1">Score1</string>
    <string name="newGame">New Game</string>
    <string name="name1">Name1</string>
    <string name="wellDone">Well Done</string>
    <string name="next">NEXT</string>
    <string name="enterName">Enter Your Name Here</string>
    <string name="ok">OK</string>


    <style name="btnStyle">
        <item name="android:textSize">20sp</item>
        <item name="android:textAllCaps">false</item>
        <item name="android:textColor">@color/black</item>
    </style>
</resources>