<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/backgroundMusic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/backgroundMusic"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/musicOn"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/musicOn"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:onClick="turnOnMusic"
        app:layout_constraintTop_toBottomOf="@id/backgroundMusic"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/musicOff"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/musicOff"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:onClick="turnOffMusic"
        app:layout_constraintLeft_toRightOf="@id/musicOn"
        app:layout_constraintTop_toBottomOf="@id/backgroundMusic"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/volume"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musicOn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/volumeUp"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/volumeUp"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/volume"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/volumeDown"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/volumeDown"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/volumeUp"
        app:layout_constraintTop_toBottomOf="@id/volume"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingHome"
        style="@style/btnStyle"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginBottom="264dp"
        android:background="#99e3e3"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>