<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="40sp"
        android:text="@string/myScore"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/myName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/name"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/myScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/score"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="#abcdef"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/newGame" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScoreboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="#99e3e3"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/scoreboard" />

    </LinearLayout>
</LinearLayout>
