<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/startGame"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGame"
        style="@style/btnStyle"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginBottom="440dp"
        android:background="#99e3e3"
        android:text="@string/startGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings"
        style="@style/btnStyle"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginBottom="376dp"
        android:background="#99e3e3"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/highestScores"
        style="@style/btnStyle"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginBottom="308dp"
        android:background="#99e3e3"
        android:text="@string/highestScores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>